[tool.poetry]
name = "inspire-dojson"
version = "0.1.0"
description = ""
authors = ["Lorenzo Vagliano <lorenzo.ventura.vagliano@cern.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
Flask = ">=0.12.3"
IDUtils = "~=1.0,>=1.0.1"
dojson = "~=1.0,>=1.3.1"
inspire-schemas = "*"
inspire-utils = "~=3.0,>=3.0.0"
isbnid_fork = "~=0.0,>=0.5.2"
langdetect = "~=1.0,>=1.0.7"
pycountry = "^22.3.5"
MarkupSafe = ">=1.1.1"
urllib3 = ">=1.26.11"
flake8-future-import = "~=0.0,>=0.4.3"
mock = "~=2.0,>=2.0.0"
pytest = "^7.4.4"
pytest-cov = "~=2.0,>=2.6.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
